[gd_scene load_steps=6 format=2]

[ext_resource path="res://snake/SnakeHead.gd" type="Script" id=1]
[ext_resource path="res://snake/SnakeSectionSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://snake/loss.wav" type="AudioStream" id=3]
[ext_resource path="res://snake/pickup.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.8406

[node name="SnakeHead" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="SnakeSectionSprite" parent="." instance=ExtResource( 2 )]
centered = false

[node name="Area2D" type="Area2D" parent="SnakeSectionSprite"]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnakeSectionSprite/Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -28.17

[node name="LossSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="SnakeSectionSprite/Area2D" to="." method="_on_Area2D_area_entered"]
